update recognizer
